# Aggreget

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aggreget.cpp  aggreget.hpp  aggreget_generated.hpp  example.cpp  generate.py
example/: example.cpp
examples/: example.cpp
src/aggreget/: aggreget.hpp  aggreget_generated.hpp
test/: CMakeLists.txt  test.cpp
